--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -30,12 +30,12 @@
 								<label for="password">Password</label>
 							</div>
 							<div class="form-label-group">
-								<input type="first_name" id="first_name" name="first_name" class="form-control" placeholder="First" required value="<%= data.first_name %>">
-								<label for="first_name">First Name</label>
+								<input type="First_Name" id="First_Name" name="First_Name" class="form-control" placeholder="First" required value="<%= data.First_Name %>">
+								<label for="First_Name">First Name</label>
 							</div>
 							<div class="form-label-group">
-								<input type="last_name" id="last_name" name="last_name" class="form-control" placeholder="Last" required value="<%= data.last_name %>">
-								<label for="last_name">Last Name</label>
+								<input type="Last_Name" id="Last_Name" name="Last_Name" class="form-control" placeholder="Last" required value="<%= data.Last_Name %>">
+								<label for="Last_Name">Last Name</label>
 							</div>
 							<button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign Up</button>
 							</button>
