--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -7,22 +7,16 @@
 	<% include ../partials/nav.ejs %>
 <div class="container">
 	<div class="row">
-		<div class="col-md-6">
-			<form action="/login" method="post">
-			<div>
-				<label>Username:</label>
-				<input type="text" name="username" />
-				<br/>
-			</div>
-			<div>
-				<label>Password:</label>
-				<input type="password" name="password" />
-			</div>
-			<div>
-				<input type="submit" value="Submit" />
-			</div>
-		</form>
+		<div class="col-md-3">
 		</div>
+		<div class="col-md-6">
+			<div class="page-header">
+				<h1>Welcome to your profile, <%= username %>!</h1>
+			</div>
+		</div>
+		<div class="col-md-3">
+		</div>
+	</div>
 </div>
 </body>
 </html>
