--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -25,9 +25,21 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li class="navbar-right">
 			<% if (typeof username != 'undefined'){ %>
-				<a style="display: inline-block;"  href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-user"></span> <%= username %></a>
+				<a style="display: inline-block;"  href="/profile"><span class="glyphicon glyphicon-user"></span> <%= username %></a>
 				/
 				<a style="display: inline-block;"  href="/logout"><span class="fas fa-sign-out-alt"></span> log out</a>
+				
+				<% if (roleID == 1){ %>
+					<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Administration <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="/admin/teams/all">All Teams</a></li>
+							<li class="divider"></li>
+							<li><a href="/admin/teams/assign">Assign Team</a></li>
+						</ul>
+					</li>
+				<% }%>
+
 			<% }else{ %>
 				<a href="/signup" style="display: inline-block;"><span class="fas fa-user-plus"></span> Sign up</a> / <a style="display: inline-block;" href="/login"><span class="fas fa-sign-in-alt"></span> Login</a>
 			<% } %>
